# Python-Package-Boilerplate

./: .dockerignore  .gitignore  .gitlab-ci.yml  .tbcp.json  MANIFEST.in  README.md  TODO.md  makefile  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
docs/: _coverpage.md  _sidebar.md  index.html  index.md
