[build-system]
requires = ["setuptools>=45","wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = 3.6
warn_return_any = true
warn_unused_configs = true
install-types = true
non-interactive = true

[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "missing-docstring",
  "unused-argument",
  "no-value-for-parameter",
  "no-member",
  "no-else-return",
  "bad-whitespace",
  "bad-continuation",
  "line-too-long",
  "fixme",
  "protected-access",
  "too-few-public-methods",
]

[tool.pylint.design]
# limiting the number of returns might discourage
# the use of guard clauses. So we increase the
# allowed number of returns from 6 to 8
max-returns = 8

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
